# aLENS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Documentation.cfg  Doxyfile  README.md  cmake-example.sh
Benchmarking/: 2023-11-06T19:18:27_commit_39ab6b2_benchmarking.toml  README.md  benchmark_analysis.ipynb  benchmark_general.py
Benchmarking/AsterGas/: RunConfig.yaml  flex_fil_param.yaml  set_env.sh
Benchmarking/AsterGas/time_test/: ProteinConfig.yaml  RunConfig.yaml
Benchmarking/CollapsedStickyFilament/: ProteinConfig.yaml  RunConfig.yaml  args.yaml  collapsed_semiflex_sticky_fil.pvsm
Benchmarking/CollapsedStickyFilament/time_test/: ProteinConfig.yaml  RunConfig.yaml
Benchmarking/ConfinedSemiFlexFilaments/: ConfinedSemiFlexFilamentsView.pvsm  ProteinConfig.yaml  RunConfig.yaml
Dep/: .gitignore  cmake-Eigen.sh  cmake-Trilinos-MKL.sh  cmake-Trilinos-OpenBLAS.sh  cmake-vtk.sh  compile_all.py  download_all.py
Docs/source/: api.rst  conf.py  docker.md  index.rst  installation.md  usage.rst
Examples/Active3DNematics/: ProteinConfig.yaml  RunConfig.yaml  active_3d_nematic.pvsm
Examples/ConfinedMonolayer/: ProteinConfig.yaml  RunConfig.yaml
Examples/DenseMonoLayer/: ProteinConfig.yaml  README.md  RunConfig.yaml
Examples/DenseStrainingMotion/: ProteinConfig.yaml  README.md  RunConfig.yaml
Examples/FlexibleFilament/: ProteinConfig.yaml  RunConfig.yaml  flex_fil_param.yaml
Examples/LargeAster/: ProteinConfig.yaml
Examples/MixMotorSliding/: MixMotorSliding.pvsm  RunConfig.yaml
Examples/OpticalTraps/: OpticalTrap.pvsm  ProteinConfig.yaml  README.md  RunConfig.yaml
Examples/PinRodSemiFlexFilament/: RunConfig.yaml
Examples/SemiFlexTrimer/: ProteinConfig.yaml  RunConfig.yaml
Examples/SpecificBindingSpheres/: ProteinConfig.yaml  RunConfig.yaml
Examples/StickyFlexibleFilament/: ProteinConfig.yaml  RunConfig.yaml  chromatin_view_200line.pvsm  flex_fil_param.yaml
InitialConfigExample/Confinement/: ProteinConfig.yaml  RunConfig.yaml
InitialConfigExample/LargeAster/: RunConfig.yaml
InitialConfigExample/PairBinding/: ProteinConfig.yaml  RunConfig.yaml
Protein/: CMakeLists.txt  ProteinBindStatus.hpp  ProteinConfig.cpp  ProteinConfig.hpp  ProteinConfig_example.yaml  ProteinData.hpp  ProteinModel.md  ProteinTest.hpp  ProteinType.hpp  test_protein.cpp
Run/result/: Clean.sh  Result2PVD.py  compress.sh  uncompress.sh
Run/result/PNG/: MovieGen.sh  cleanpng.sh
Run/scripts/: DensityMT.py  jobsub_slurm.sh  run_ompi.sh
SRC/: CalcProteinBind.hpp  TubuleBind.hpp  TubuleSystem.cpp  TubuleSystem.hpp  kmc_step_funcs.hpp  main.cpp
Utils/: README.md  add_hp1_particles.py  add_stored_constraint_to_tubule_initial.py  add_tribend_rigidity.py  copy_run_with_last_config_inits.py  fix_timestep_info.py  flex_fil_param.yaml  gen_compact_fil_from_data.py  gen_flexible_init.py  gen_hydro_spring_test.py  gen_hydro_test.py  gen_long_filament_from_data.py  gen_particle_cube.py  gen_rigid_filament_protein_file.py  gen_semiflex_fil.py  gen_spindle_config.py  hydro_utils.py  initialize_line_length_scan.py  make_lammps_from_alens.py  make_last_step_new_init.py  make_line_equil_runs.py  read_write_utils.py  recenter_polymer.py  remove_lmps_restart.py  run_multi_sims.py  runlog_funcs.py  scaling_sim_generator.py  sine_wave.ipynb  time_testing.py
cmake/: FindTRNG.cmake  gitversion.cmake
docs/source/: aLENS-first_run.md  analysis.rst  conf.py  docker.md  index.rst  installation.md  quickstart.md  usage.rst  visualization.md
documentation/: requirements.txt
documentation/source/: api.rst
